add styling to drum backing track buttons

--- a/index.html
+++ b/index.html
@@ -103,27 +103,27 @@
             <div class="sound-board">
                 <!--row container 4-->
                 <div class="row">
-                    <button id="btn-10" class="sound-btn">KEYS 1</button>
-                    <button id="btn-11" class="sound-btn">KEYS 2</button>
-                    <button id="btn-12" class="sound-btn">KEYS 3</button>
+                    <button id="btn-10" class="sound-btn">Y</button>
+                    <button id="btn-11" class="sound-btn">U</button>
+                    <button id="btn-12" class="sound-btn">I</button>
                 </div>
                 <!--row container 3-->
                 <div class="row">
-                    <button id="btn-7" class="sound-btn" >BLEEP 1</button>
-                    <button id="btn-8" class="sound-btn" >BLEEP 2</button>
-                    <button id="btn-9" class="sound-btn" >BLEEP 3</butto>
+                    <button id="btn-7" class="sound-btn">E</button>
+                    <button id="btn-8" class="sound-btn">R</button>
+                    <button id="btn-9" class="sound-btn">T</butto>
                 </div>
                 <!--row container 2-->
                 <div class="row">
-                    <button id="btn-4" class="sound-btn" >HH 1</button>
-                    <button id="btn-5" class="sound-btn" >HH1</button>
-                    <button id="btn-6" class="sound-btn">CYM</butto>
+                    <button id="btn-4" class="sound-btn">H</button>
+                    <button id="btn-5" class="sound-btn">J</button>
+                    <button id="btn-6" class="sound-btn">K</butto>
                 </div>
                 <!--row container 1-->
                 <div class="row">
-                    <button id="btn-1" class="sound-btn" type="button">KIICK 1</button>
-                    <button id="btn-2" class="sound-btn" type="button">SNARE 1</button>
-                    <button id="btn-3" class="sound-btn" type="button">SNARE 2</button>
+                    <button id="btn-1" class="sound-btn" type="button">D</button>
+                    <button id="btn-2" class="sound-btn" type="button">F</button>
+                    <button id="btn-3" class="sound-btn" type="button">G</button>
                 </div>
             </div>
             <!--sound-board end-->
@@ -133,18 +133,18 @@
                 <!--Drums backing track container -->
                 <div class="row">
                     <div id="dr1-group">
-                        <button id="dr-bt-1" class="dr-lp" type="button">Drums1</button>
+                        <button id="dr-bt-1" class="dr" type="button">DB1</button>
                         <button id="dr-lp-1" class ="dr-lp" type="button">loop</button> <!--loop on of for dr1 -->
                         <button id="dr-stop-1" class="dr-stop" type="button">stop</button> <!--stop for dr1-->
                     </div> 
                     <div id="dr2-group">   
-                        <button id="dr-bt-2"class="dr">Drums2</button>
-                        <button id="dr-lp-2" class="dr" type="button">loop</button>
+                        <button id="dr-bt-2"class="dr">DB2</button>
+                        <button id="dr-lp-2" class="dr-lp" type="button">loop</button>
                         <button id="dr-stop-2" class="dr-stop" type="button">stop</button>
                     </div>  
                     <div id="dr3-group">
-                        <button id="dr-bt-3" class="dr">Drums2</button>
-                        <button id="dr-lp-3" class="dr" type="button">loop</button>
+                        <button id="dr-bt-3" class="dr">DB3</button>
+                        <button id="dr-lp-3" class="dr-lp" type="button">loop</button>
                         <button id="dr-stop-3" class="dr-stop" type="button">stop</button>
                     </div>
                         
