fixed erros identified by validator

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Silkscreen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Sound-Fi</title> 
 </head>
   <body>
-  <section class="audio">
+  <div class="audio">
     <!--audio elements hidden from page-->
     <!--kick child 1-->
     <audio id="kick">
@@ -89,7 +89,7 @@
         <source src="assets/audio/loop4.mp3" type="audio/mpeg">
     </audio>
     <!---audio end-->
-  </section>
+</div>
     <header>
         <div class="header">
             <h1>Sound-Fi</h1>
@@ -111,13 +111,13 @@
                 <div class="row">
                     <button id="btn-7" class="sound-btn">E</button>
                     <button id="btn-8" class="sound-btn">R</button>
-                    <button id="btn-9" class="sound-btn">T</butto>
+                    <button id="btn-9" class="sound-btn">T</button>
                 </div>
                 <!--row container 2-->
                 <div class="row">
                     <button id="btn-4" class="sound-btn">H</button>
                     <button id="btn-5" class="sound-btn">J</button>
-                    <button id="btn-6" class="sound-btn">K</butto>
+                    <button id="btn-6" class="sound-btn">K</button>
                 </div>
                 <!--row container 1-->
                 <div class="row">
@@ -128,7 +128,7 @@
             </div>
             <!--sound-board end-->
             <!--loop soundboard-container-->
-            <h3>Play Loops and Jam along</h3>
+            <h3>Play Beats and Jam along</h3>
             <div class="sound-board" id="sound-board2">
                 <!--Drums backing track container -->
                 <div class="row">
@@ -138,7 +138,7 @@
                         <button id="dr-stop-1" class="dr-stop" type="button">stop</button> <!--stop for dr1-->
                     </div> 
                     <div id="dr2-group">   
-                        <button id="dr-bt-2"class="dr">DB2</button>
+                        <button id="dr-bt-2" class="dr">DB2</button>
                         <button id="dr-lp-2" class="dr-lp" type="button">loop</button>
                         <button id="dr-stop-2" class="dr-stop" type="button">stop</button>
                     </div>  
@@ -158,5 +158,4 @@
  
     <script src="assets/js/script.js"></script>
   </body>
-  <footer></footer>
 </html>
