renamed drum beat pads to corresonding keyboard mapping

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                         <button id="dr-stop-2" class="dr-stop" type="button">stop</button>
                     </div>  
                     <div id="dr3-group">
-                        <button id="dr-bt-3" class="dr">DB3</button>
-                        <button id="dr-lp-3" class="dr-lp" type="button">loop</button>
-                        <button id="dr-stop-3" class="dr-stop" type="button">stop</button>
+                        <button id="dr-bt-3" class="dr">C</button>
+                        <button id="dr-lp-3" class="dr-lp" type="button">V</button>
+                        <button id="dr-stop-3" class="dr-stop" type="button">B</button>
                     </div>
                         
                 </div>
