amended button names

--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
                 <!--Drums backing track container -->
                 <div class="row">
                     <div id="dr1-group">
-                        <button id="dr-bt-1" class="dr" type="button">DB1</button>
+                        <button id="dr-bt-1" class="dr" type="button">C</button>
                         <button id="dr-lp-1" class ="dr-lp" type="button">loop</button> <!--loop on of for dr1 -->
                         <button id="dr-stop-1" class="dr-stop" type="button">stop</button> <!--stop for dr1-->
                     </div> 
                     <div id="dr2-group">   
-                        <button id="dr-bt-2" class="dr">DB2</button>
+                        <button id="dr-bt-2" class="dr">V</button>
                         <button id="dr-lp-2" class="dr-lp" type="button">loop</button>
                         <button id="dr-stop-2" class="dr-stop" type="button">stop</button>
                     </div>  
                     <div id="dr3-group">
-                        <button id="dr-bt-3" class="dr">C</button>
-                        <button id="dr-lp-3" class="dr-lp" type="button">V</button>
-                        <button id="dr-stop-3" class="dr-stop" type="button">B</button>
+                        <button id="dr-bt-3" class="dr">B</button>
+                        <button id="dr-lp-3" class="dr-lp" type="button">Loop</button>
+                        <button id="dr-stop-3" class="dr-stop" type="button">stop</button>
                     </div>
                         
                 </div>
