--- a/form.html
+++ b/form.html
@@ -14,8 +14,8 @@
       <div class="header">
         <h1>Sound-Fi</h1>
       </div>
-      <h3>Creat account for</h3>
-      <h3>early to updates</h3>
+      <h3>Create account for</h3>
+      <h3>early access to updates</h3>
       <h4>Form for demo purposes only</h4>
     </header>
     <div class="main">
